tests/diagnostics/packages/import_usage/imported_type_mut_method_immutable_receiver/expect.txt
# exit: 1
lib.coppice:5:17: error: cannot call mutating method 'User.bump' on immutable binding 'user'
      return user.bump(1)
                  ^
